# file-net

./: .gitignore  Cargo.toml  ChangeLog.md  README.md  run.ps1
.file-net-struct/: struct.json
.github/workflows/: build and release.yaml  create-git-release.js
assets/: icon.ai
src/: command.rs  connect.rs  file-tester.rs  file.rs  main.rs  tray.rs
