[package]
name = "file-net"
version = "0.1.0"
edition = "2021"
authors = ["Yijun-Wu"]
description = "A file transfer tool based on the network."
repository = "https://github.com/Wu-Yijun/file-net"
license = "MIT OR GPL-3.0"

[dependencies]
clap = { version = "*", features = ["derive"] }
windows-sys = { version = "*", features = [
    "Win32_Foundation",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
] }
wgpu = "*"
eframe = { version = "*", features = ["glow"] }
trayicon = "*"

if-addrs = "*"
bincode = "*"
serde = { version = "*", features = ["derive"] }
arboard = "*"
